--- a/Tests/Editor/com.natteens.ultrasavesystem.editor.tests.asmdef
+++ b/Tests/Editor/com.natteens.ultrasavesystem.editor.tests.asmdef
@@ -1,20 +1,25 @@
 {
-  "name": "com.natteens.ultrasavesystem.editor.tests",
-  "rootNamespace": "Natteens.UltraSaveSystem.Tests",
-  "references": [
-    "UnityEngine.TestRunner",
-    "UnityEditor.TestRunner",
-    "com.natteens.ultrasavesystem",
-    "com.natteens.ultrasavesystem.editor"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "defineConstraints": [
-    "UNITY_INCLUDE_TESTS"
-  ],
-  "precompiledReferences": [
-    "nunit.framework.dll"
-  ]
+    "name": "com.natteens.ultrasavesystem.editor.tests",
+    "rootNamespace": "UltraSaveSystem.Tests.Editor",
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "com.natteens.ultrasavesystem",
+        "com.natteens.ultrasavesystem.editor"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
