BREAKING CHANGE: Refatoração base do sistema

--- a/Editor/com.natteens.ultrasavesystem.editor.asmdef
+++ b/Editor/com.natteens.ultrasavesystem.editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "com.natteens.ultrasavesystem.editor",
-    "rootNamespace": "UltraSaveSystem.Editor",
+    "rootNamespace": "UltraSaveSystem",
     "references": [
         "com.natteens.ultrasavesystem"
     ],
