chore: Refactored scripts and system

--- a/Tests/Runtime/com.natteens.ultrasavesystem.runtime.tests.asmdef
+++ b/Tests/Runtime/com.natteens.ultrasavesystem.runtime.tests.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "UltraSaveSystem",
     "references": [
         "UnityEditor.TestRunner",
-        "com.natteens.ultrasavesystem"
+        "com.natteens.ultrasavesystem",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
