--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "author": {
     "name": "Nathan da Silva Miranda",
-    "email": "nathanmiranda1102@gmail.com",
+    "email": "natteens.social@gmail.com",
     "url": "https://github.com/Natteens"
   },
   "unity": "2021.3",
